--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,6 +15,7 @@
 
              {{>headers}}
     <img class="portrait" src="/ing/tolu.jpg">
+    <p> This site was created by Tolu, it uses data from mapbox.com and weatherapp.com...</p>
 
     </div>
     
